--- a/src/main/resources/assets/powah/lang/ko_kr.json
+++ b/src/main/resources/assets/powah/lang/ko_kr.json
@@ -79,13 +79,13 @@
     "block.powah.player_transmitter_niotic": "플레이어 송신기 (나이오틱)",
     "block.powah.player_transmitter_spirited": "플레이어 송신기 (영혼들린)",
     "block.powah.player_transmitter_nitro": "플레이어 송신기 (니트로)",
-    "block.powah.energy_hopper_starter": "에너지 깔때기 (초심자)",
-    "block.powah.energy_hopper_basic": "에너지 깔때기 (기본)",
-    "block.powah.energy_hopper_hardened": "에너지 깔때기 (강화)",
-    "block.powah.energy_hopper_blazing": "에너지 깔때기 (타오르는)",
-    "block.powah.energy_hopper_niotic": "에너지 깔때기 (나이오틱)",
-    "block.powah.energy_hopper_spirited": "에너지 깔때기 (영혼들린)",
-    "block.powah.energy_hopper_nitro": "에너지 깔때기 (니트로)",
+    "block.powah.energy_hopper_starter": "에너지 호퍼 (초심자)",
+    "block.powah.energy_hopper_basic": "에너지 호퍼 (기본)",
+    "block.powah.energy_hopper_hardened": "에너지 호퍼 (강화)",
+    "block.powah.energy_hopper_blazing": "에너지 호퍼 (타오르는)",
+    "block.powah.energy_hopper_niotic": "에너지 호퍼 (나이오틱)",
+    "block.powah.energy_hopper_spirited": "에너지 호퍼 (영혼들린)",
+    "block.powah.energy_hopper_nitro": "에너지 호퍼 (니트로)",
     "block.powah.energy_discharger_starter": "에너지 방전기(초심자)",
     "block.powah.energy_discharger_basic": "에너지 방전기(기본)",
     "block.powah.energy_discharger_hardened": "에너지 방전기(강화)",
@@ -227,8 +227,8 @@
     "wiki.powah.player_transmitter_0": "플레이어 송신기는 일반 바인딩 카드가 있는 경우 동일한 차원의 아무 곳, 차원 바인딩 카드가 있는 경우 차원을 넘어 갑옷 슬롯 및 보조 손을 포함하여 연결된 플레이어 인벤토리의 항목을 무선으로 충전하는 데 사용되는 블록입니다.",
     "wiki.powah.energy_discharger": "에너지 방전기",
     "wiki.powah.energy_discharger_0": "에너지 방전기는 충전된 아이템에서 에너지(FE)를 배출한 다음 내부 버퍼에 저장하는 데 사용되는 블록입니다. 그런 다음 케이블로 연결하여 저장된 전력을 추출하고 다시 사용할 수 있습니다.",
-    "wiki.powah.energy_hopper": "에너지 깔때기",
-    "wiki.powah.energy_hopper_0": "에너지 깔때기는 상자 같이, 내부에 접근 가능한 보관함이 있고 포지 에너지 버퍼가 없는 블록 내의 충전 가능한 아이템을 충전하는 데 사용됩니다.",
+    "wiki.powah.energy_hopper": "에너지 호퍼",
+    "wiki.powah.energy_hopper_0": "에너지 호퍼는 상자 같이, 내부에 접근 가능한 보관함이 있고 포지 에너지 버퍼가 없는 블록 내의 충전 가능한 아이템을 충전하는 데 사용됩니다.",
     "wiki.powah.wrench": "렌치",
     "wiki.powah.wrench_0": "렌치의 3가지 모드:",
     "wiki.powah.wrench_1": "구성 모드: 케이블의 입/출력 구성을 변경하는 데 사용.",
