--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -103,7 +103,6 @@
   "block.powah.uraninite_ore_poor": "Uraninite Ore (Poor)",
   "block.powah.uraninite_ore_dense": "Uraninite Ore (Dense)",
   "block.powah.dry_ice": "Dry Ice",
-  "item.powah.book": "Manual (Powah!)",
   "item.powah.wrench": "Wrench",
   "item.powah.dielectric_paste": "Dielectric Paste",
   "item.powah.dielectric_rod": "Dielectric Rod",
@@ -179,6 +178,20 @@
   "chat.powah.wrench.link.done": "Linking done!",
   "chat.powah.wrench.link.fail": "Out of range!!",
 
+  "block.powah.energy_cell_overcharged": "Energy Cell (Overcharged)",
+  "block.powah.ender_cell_overcharged": "Ender Cell (Overcharged)",
+  "block.powah.energy_cable_overcharged": "Energy Cable (Overcharged)",
+  "block.powah.ender_gate_overcharged": "Ender Gate (Overcharged)",
+  "block.powah.energizing_rod_overcharged": "Energizing Rod (Overcharged)",
+  "block.powah.furnator_overcharged": "Furnator (Overcharged)",
+  "block.powah.magmator_overcharged": "Magmator (Overcharged)",
+  "block.powah.thermo_generator_overcharged": "Thermo Generator (Overcharged)",
+  "block.powah.solar_panel_overcharged": "Solar Panel (Overcharged)",
+  "block.powah.reactor_overcharged": "Reactor (Overcharged)",
+  "block.powah.player_transmitter_overcharged": "Player Transmitter (Overcharged)",
+  "block.powah.energy_hopper_overcharged": "Energy Hopper (Overcharged)",
+  "block.powah.energy_discharger_overcharged": "Energy Discharger (Overcharged)",
+  "item.powah.battery_overcharged": "Battery (Overcharged)",
   "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn.",
   "item.powah.energized_steel_helmet": "Energized Steel Helmet",
   "item.powah.energized_steel_chestplate": "Energized Steel Chestplate",
