--- a/src/main/resources/assets/powah/lang/ru_ru.json
+++ b/src/main/resources/assets/powah/lang/ru_ru.json
@@ -103,7 +103,6 @@
   "block.powah.uraninite_ore_poor": "Бедная уранинитовая руда",
   "block.powah.uraninite_ore_dense": "Богатая уранинитовая руда",
   "block.powah.dry_ice": "Сухой лёд",
-  "item.powah.book": "Руководство по моду «Powah!»",
   "item.powah.wrench": "Гаечный ключ",
   "item.powah.dielectric_paste": "Диэлектрическая паста",
   "item.powah.dielectric_rod": "Продольный диэлектрический стержень",
@@ -179,6 +178,20 @@
   "chat.powah.wrench.link.done": "Привязка завершена!",
   "chat.powah.wrench.link.fail": "Слишком далеко!",
 
+  "block.powah.energy_cell_overcharged": "Энергоячейка (Перегруженная)",
+  "block.powah.ender_cell_overcharged": "Эндер-ячейка (Перегруженная)",
+  "block.powah.energy_cable_overcharged": "Энергокабель (Перегруженный)",
+  "block.powah.ender_gate_overcharged": "Эндер-шлюз (Перегруженный)",
+  "block.powah.energizing_rod_overcharged": "Зарядоотвод (Перегруженный)",
+  "block.powah.furnator_overcharged": "Углегенератор (Перегруженный)",
+  "block.powah.magmator_overcharged": "Магмогенератор (Перегруженный)",
+  "block.powah.thermo_generator_overcharged": "Термогенератор (Перегруженный)",
+  "block.powah.solar_panel_overcharged": "Солнечная панель (Перегруженная)",
+  "block.powah.reactor_overcharged": "Реактор (Перегруженный)",
+  "block.powah.player_transmitter_overcharged": "Беспроводной зарядник (Перегруженный)",
+  "block.powah.energy_hopper_overcharged": "Энерговоронка (Перегруженная)",
+  "block.powah.energy_discharger_overcharged": "Энергоразрядник (Перегруженный)",
+  "item.powah.battery_overcharged": "Аккумулятор (Перегруженный)",
   "tooltip.powah.armor_lightning_immunity": "Защищает от урона от грозы когда надет полный набор любой брони из Powah.",
   "item.powah.energized_steel_helmet": "Электростальной шлем",
   "item.powah.energized_steel_chestplate": "Электростальной нагрудник",
