Creative items and overcharged capacitor

--- a/src/main/resources/assets/powah/lang/ru_ru.json
+++ b/src/main/resources/assets/powah/lang/ru_ru.json
@@ -192,6 +192,9 @@
   "block.powah.energy_hopper_overcharged": "Энерговоронка (Перегруженная)",
   "block.powah.energy_discharger_overcharged": "Энергоразрядник (Перегруженный)",
   "item.powah.battery_overcharged": "Аккумулятор (Перегруженный)",
+  "item.powah.capacitor_overcharged": "Перегруженный конденсатор",
+  "item.powah.capacitor_creative": "Креативный конденсатор",
+  "item.powah.battery_creative": "Аккумулятор (Креативный)",
   "tooltip.powah.armor_lightning_immunity": "Защищает от урона от грозы когда надет полный набор любой брони из Powah.",
   "item.powah.energized_steel_helmet": "Электростальной шлем",
   "item.powah.energized_steel_chestplate": "Электростальной нагрудник",
