--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -192,6 +192,9 @@
   "block.powah.energy_hopper_overcharged": "Energy Hopper (Overcharged)",
   "block.powah.energy_discharger_overcharged": "Energy Discharger (Overcharged)",
   "item.powah.battery_overcharged": "Battery (Overcharged)",
+  "item.powah.capacitor_overcharged": "Overcharged Capacitor",
+  "item.powah.capacitor_creative": "Creative Capacitor",
+  "item.powah.battery_creative": "Battery (Creative)",
   "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn.",
   "item.powah.energized_steel_helmet": "Energized Steel Helmet",
   "item.powah.energized_steel_chestplate": "Energized Steel Chestplate",
