--- a/src/main/resources/assets/powah/lang/zh_cn.json
+++ b/src/main/resources/assets/powah/lang/zh_cn.json
@@ -106,7 +106,7 @@
   "item.powah.wrench": "扳手",
   "item.powah.dielectric_paste": "绝缘覆层",
   "item.powah.dielectric_rod": "绝缘棒",
-  "item.powah.dielectric_rod_horizontal": "绝缘棒",
+  "item.powah.dielectric_rod_horizontal": "绝缘棒（水平）",
   "item.powah.dielectric_casing": "绝缘外壳",
   "item.powah.capacitor_basic_tiny": "基础电容（小型）",
   "item.powah.capacitor_basic": "基础电容（中型）",
@@ -128,7 +128,7 @@
   "item.powah.blank_card": "空白卡",
   "item.powah.binding_card": "绑定卡",
   "item.powah.binding_card_dim": "绑定卡（跨维度）",
-  "item.powah.lens_of_ender": "末影透镜",
+   "item.powah.lens_of_ender": "末影透镜",
   "item.powah.photoelectric_pane": "光伏板",
   "item.powah.thermoelectric_plate": "热力板",
   "item.powah.energised_steel": "充能钢",
@@ -176,5 +176,29 @@
   "chat.powah.no.binding": "这张卡已被绑定至 %s！",
   "chat.powah.wrench.link.start": "开始链接……",
   "chat.powah.wrench.link.done": "链接完成！",
-  "chat.powah.wrench.link.fail": "超出范围！"
+  "chat.powah.wrench.link.fail": "超出范围！",
+
+  "block.powah.energy_cell_overcharged": "能量单元（超载）",
+  "block.powah.ender_cell_overcharged": "末影单元（超载）",
+  "block.powah.energy_cable_overcharged": "能量线缆（超载）",
+  "block.powah.ender_gate_overcharged": "末影道门（超载）",
+  "block.powah.energizing_rod_overcharged": "充能棒（超载）",
+  "block.powah.furnator_overcharged": "熔炉发电机（超载）",
+  "block.powah.magmator_overcharged": "岩浆发电机（超载）",
+  "block.powah.thermo_generator_overcharged": "热力发电机（超载）",
+  "block.powah.solar_panel_overcharged": "太阳能板（超载）",
+  "block.powah.reactor_overcharged": "反应堆（超载）",
+  "block.powah.player_transmitter_overcharged": "玩家供电仪（超载）",
+  "block.powah.energy_hopper_overcharged": "能量漏斗（超载）",
+  "block.powah.energy_discharger_overcharged": "能量提取器（超载）",
+  "item.powah.overcharged_core": "超载核心",
+  "item.powah.battery_overcharged": "电池（超载）",
+  "item.powah.capacitor_overcharged": "超载电容",
+  "item.powah.capacitor_creative": "创造电容",
+  "item.powah.battery_creative": "电池（创造）",
+  "tooltip.powah.armor_lightning_immunity": "当装备全套Powah套装时，获得闪电伤害免疫。",
+  "item.powah.energized_steel_helmet": "充能钢头盔",
+  "item.powah.energized_steel_chestplate": "充能钢胸甲",
+  "item.powah.energized_steel_leggings": "充能钢护腿",
+  "item.powah.energized_steel_boots": "充能钢靴子"
 }
