--- a/src/main/resources/assets/powah/lang/tr_tr.json
+++ b/src/main/resources/assets/powah/lang/tr_tr.json
@@ -30,13 +30,13 @@
   "block.powah.ender_gate_spirited": "Ender Geçiti (Ruhlanmış)",
   "block.powah.ender_gate_nitro": "Ender Geçiti (Nitro)",
   "block.powah.energizing_orb": "Enerji Verici Küre",
-  "block.powah.energizing_rod_starter": "Energizing Rod (Starter)",
-  "block.powah.energizing_rod_basic": "Energizing Rod (Basit)",
-  "block.powah.energizing_rod_hardened": "Energizing Rod (Sertleştirilmiş)",
-  "block.powah.energizing_rod_blazing": "Energizing Rod (Alevli)",
-  "block.powah.energizing_rod_niotic": "Energizing Rod (Niotik)",
-  "block.powah.energizing_rod_spirited": "Energizing Rod (Ruhlanmış)",
-  "block.powah.energizing_rod_nitro": "Energizing Rod (Nitro)",
+  "block.powah.energizing_rod_starter": "Enerji Verici Çubuk (Starter)",
+  "block.powah.energizing_rod_basic": "Enerji Verici Çubuk (Basit)",
+  "block.powah.energizing_rod_hardened": "Enerji Verici Çubuk (Sertleştirilmiş)",
+  "block.powah.energizing_rod_blazing": "Enerji Verici Çubuk (Alevli)",
+  "block.powah.energizing_rod_niotic": "Enerji Verici Çubuk (Niotik)",
+  "block.powah.energizing_rod_spirited": "Enerji Verici Çubuk (Ruhlanmış)",
+  "block.powah.energizing_rod_nitro": "Enerji Verici Çubuk (Nitro)",
   "block.powah.furnator_starter": "Furnator (Starter)",
   "block.powah.furnator_basic": "Furnator (Basit)",
   "block.powah.furnator_hardened": "Furnator (Sertleştirilmiş)",
@@ -51,13 +51,13 @@
   "block.powah.magmator_niotic": "Magmator (Niotic)",
   "block.powah.magmator_spirited": "Magmator (Ruhlanmış)",
   "block.powah.magmator_nitro": "Magmator (Nitro)",
-  "block.powah.thermo_generator_starter": "Thermo Generator (Starter)",
-  "block.powah.thermo_generator_basic": "Thermo Generator (Basit)",
-  "block.powah.thermo_generator_hardened": "Thermo Generator (Sertleştirilmiş)",
-  "block.powah.thermo_generator_blazing": "Thermo Generator (Blazing)",
-  "block.powah.thermo_generator_niotic": "Thermo Generator (Niotic)",
-  "block.powah.thermo_generator_spirited": "Thermo Generator (Ruhlanmış)",
-  "block.powah.thermo_generator_nitro": "Thermo Generator (Nitro)",
+  "block.powah.thermo_generator_starter": "Termoelektrik Jenerator (Starter)",
+  "block.powah.thermo_generator_basic": "Termoelektrik Jenerator (Basit)",
+  "block.powah.thermo_generator_hardened": "Termoelektrik Jenerator (Sertleştirilmiş)",
+  "block.powah.thermo_generator_blazing": "Termoelektrik Jenerator (Alevli)",
+  "block.powah.thermo_generator_niotic": "Termoelektrik Jenerator (Niotik)",
+  "block.powah.thermo_generator_spirited": "Termoelektrik Jenerator (Ruhlanmış)",
+  "block.powah.thermo_generator_nitro": "Termoelektrik Jenerator (Nitro)",
   "block.powah.solar_panel_starter": "Güneş Paneli (Starter)",
   "block.powah.solar_panel_basic": "Güneş Paneli (Basit)",
   "block.powah.solar_panel_hardened": "Güneş Paneli (Sertleştirilmiş)",
