--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -1,204 +1,122 @@
 {
-  "itemGroup.powah": "Powah",
-  "block.powah.energy_cell_starter": "Energy Cell (Starter)",
-  "block.powah.energy_cell_basic": "Energy Cell (Basic)",
-  "block.powah.energy_cell_hardened": "Energy Cell (Hardened)",
-  "block.powah.energy_cell_blazing": "Energy Cell (Blazing)",
-  "block.powah.energy_cell_niotic": "Energy Cell (Niotic)",
-  "block.powah.energy_cell_spirited": "Energy Cell (Spirited)",
-  "block.powah.energy_cell_nitro": "Energy Cell (Nitro)",
-  "block.powah.energy_cell_creative": "Energy Cell (Creative)",
-  "block.powah.ender_cell_starter": "Ender Cell (Starter)",
-  "block.powah.ender_cell_basic": "Ender Cell (Basic)",
-  "block.powah.ender_cell_hardened": "Ender Cell (Hardened)",
-  "block.powah.ender_cell_blazing": "Ender Cell (Blazing)",
-  "block.powah.ender_cell_niotic": "Ender Cell (Niotic)",
-  "block.powah.ender_cell_spirited": "Ender Cell (Spirited)",
-  "block.powah.ender_cell_nitro": "Ender Cell (Nitro)",
-  "block.powah.energy_cable_starter": "Energy Cable (Starter)",
-  "block.powah.energy_cable_basic": "Energy Cable (Basic)",
-  "block.powah.energy_cable_hardened": "Energy Cable (Hardened)",
-  "block.powah.energy_cable_blazing": "Energy Cable (Blazing)",
-  "block.powah.energy_cable_niotic": "Energy Cable (Niotic)",
-  "block.powah.energy_cable_spirited": "Energy Cable (Spirited)",
-  "block.powah.energy_cable_nitro": "Energy Cable (Nitro)",
-  "block.powah.ender_gate_starter": "Ender Gate (Starter)",
-  "block.powah.ender_gate_basic": "Ender Gate (Basic)",
-  "block.powah.ender_gate_hardened": "Ender Gate (Hardened)",
-  "block.powah.ender_gate_blazing": "Ender Gate (Blazing)",
-  "block.powah.ender_gate_niotic": "Ender Gate (Niotic)",
-  "block.powah.ender_gate_spirited": "Ender Gate (Spirited)",
-  "block.powah.ender_gate_nitro": "Ender Gate (Nitro)",
-  "block.powah.energizing_orb": "Energizing Orb",
-  "block.powah.energizing_rod_starter": "Energizing Rod (Starter)",
-  "block.powah.energizing_rod_basic": "Energizing Rod (Basic)",
-  "block.powah.energizing_rod_hardened": "Energizing Rod (Hardened)",
-  "block.powah.energizing_rod_blazing": "Energizing Rod (Blazing)",
-  "block.powah.energizing_rod_niotic": "Energizing Rod (Niotic)",
-  "block.powah.energizing_rod_spirited": "Energizing Rod (Spirited)",
-  "block.powah.energizing_rod_nitro": "Energizing Rod (Nitro)",
-  "block.powah.furnator_starter": "Furnator (Starter)",
-  "block.powah.furnator_basic": "Furnator (Basic)",
-  "block.powah.furnator_hardened": "Furnator (Hardened)",
-  "block.powah.furnator_blazing": "Furnator (Blazing)",
-  "block.powah.furnator_niotic": "Furnator (Niotic)",
-  "block.powah.furnator_spirited": "Furnator (Spirited)",
-  "block.powah.furnator_nitro": "Furnator (Nitro)",
-  "block.powah.magmator_starter": "Magmator (Starter)",
-  "block.powah.magmator_basic": "Magmator (Basic)",
-  "block.powah.magmator_hardened": "Magmator (Hardened)",
-  "block.powah.magmator_blazing": "Magmator (Blazing)",
-  "block.powah.magmator_niotic": "Magmator (Niotic)",
-  "block.powah.magmator_spirited": "Magmator (Spirited)",
-  "block.powah.magmator_nitro": "Magmator (Nitro)",
-  "block.powah.thermo_generator_starter": "Thermo Generator (Starter)",
-  "block.powah.thermo_generator_basic": "Thermo Generator (Basic)",
-  "block.powah.thermo_generator_hardened": "Thermo Generator (Hardened)",
-  "block.powah.thermo_generator_blazing": "Thermo Generator (Blazing)",
-  "block.powah.thermo_generator_niotic": "Thermo Generator (Niotic)",
-  "block.powah.thermo_generator_spirited": "Thermo Generator (Spirited)",
-  "block.powah.thermo_generator_nitro": "Thermo Generator (Nitro)",
-  "block.powah.solar_panel_starter": "Solar Panel (Starter)",
-  "block.powah.solar_panel_basic": "Solar Panel (Basic)",
-  "block.powah.solar_panel_hardened": "Solar Panel (Hardened)",
-  "block.powah.solar_panel_blazing": "Solar Panel (Blazing)",
-  "block.powah.solar_panel_niotic": "Solar Panel (Niotic)",
-  "block.powah.solar_panel_spirited": "Solar Panel (Spirited)",
-  "block.powah.solar_panel_nitro": "Solar Panel (Nitro)",
-  "block.powah.reactor_starter": "Reactor (Starter)",
-  "block.powah.reactor_basic": "Reactor (Basic)",
-  "block.powah.reactor_hardened": "Reactor (Hardened)",
-  "block.powah.reactor_blazing": "Reactor (Blazing)",
-  "block.powah.reactor_niotic": "Reactor (Niotic)",
-  "block.powah.reactor_spirited": "Reactor (Spirited)",
-  "block.powah.reactor_nitro": "Reactor (Nitro)",
-  "block.powah.player_transmitter_starter": "Player Transmitter (Starter)",
-  "block.powah.player_transmitter_basic": "Player Transmitter (Basic)",
-  "block.powah.player_transmitter_hardened": "Player Transmitter (Hardened)",
-  "block.powah.player_transmitter_blazing": "Player Transmitter (Blazing)",
-  "block.powah.player_transmitter_niotic": "Player Transmitter (Niotic)",
-  "block.powah.player_transmitter_spirited": "Player Transmitter (Spirited)",
-  "block.powah.player_transmitter_nitro": "Player Transmitter (Nitro)",
-  "block.powah.energy_hopper_starter": "Energy Hopper (Starter)",
-  "block.powah.energy_hopper_basic": "Energy Hopper (Basic)",
-  "block.powah.energy_hopper_hardened": "Energy Hopper (Hardened)",
-  "block.powah.energy_hopper_blazing": "Energy Hopper (Blazing)",
-  "block.powah.energy_hopper_niotic": "Energy Hopper (Niotic)",
-  "block.powah.energy_hopper_spirited": "Energy Hopper (Spirited)",
-  "block.powah.energy_hopper_nitro": "Energy Hopper (Nitro)",
-  "block.powah.energy_discharger_starter": "Energy Discharger (Starter)",
-  "block.powah.energy_discharger_basic": "Energy Discharger (Basic)",
-  "block.powah.energy_discharger_hardened": "Energy Discharger (Hardened)",
-  "block.powah.energy_discharger_blazing": "Energy Discharger (Blazing)",
-  "block.powah.energy_discharger_niotic": "Energy Discharger (Niotic)",
-  "block.powah.energy_discharger_spirited": "Energy Discharger (Spirited)",
-  "block.powah.energy_discharger_nitro": "Energy Discharger (Nitro)",
-  "block.powah.energized_steel_block": "Block Of Energized Steel",
-  "block.powah.blazing_crystal_block": "Block Of Blazing Crystal",
-  "block.powah.niotic_crystal_block": "Block Of Niotic Crystal",
-  "block.powah.spirited_crystal_block": "Block Of Spirited Crystal",
-  "block.powah.nitro_crystal_block": "Block Of Nitro Crystal",
-  "block.powah.uraninite_block": "Block Of Uraninite",
-  "block.powah.uraninite_ore": "Uraninite Ore",
-  "block.powah.uraninite_ore_poor": "Uraninite Ore (Poor)",
-  "block.powah.uraninite_ore_dense": "Uraninite Ore (Dense)",
-  "block.powah.dry_ice": "Dry Ice",
-  "item.powah.wrench": "Wrench",
-  "item.powah.dielectric_paste": "Dielectric Paste",
-  "item.powah.dielectric_rod": "Dielectric Rod",
-  "item.powah.dielectric_rod_horizontal": "Dielectric Rod (Horizontal)",
-  "item.powah.dielectric_casing": "Dielectric Casing",
-  "item.powah.capacitor_basic_tiny": "Basic Capacitor (Tiny)",
-  "item.powah.capacitor_basic": "Basic Capacitor",
-  "item.powah.capacitor_basic_large": "Basic Capacitor (Large)",
-  "item.powah.capacitor_hardened": "Hardened Capacitor",
-  "item.powah.capacitor_blazing": "Blazing Capacitor",
-  "item.powah.capacitor_niotic": "Niotic Capacitor",
-  "item.powah.capacitor_spirited": "Spirited Capacitor",
-  "item.powah.capacitor_nitro": "Nitro Capacitor",
-  "item.powah.battery_starter": "Battery (Starter)",
-  "item.powah.battery_basic": "Battery (Basic)",
-  "item.powah.battery_hardened": "Battery (Hardened)",
-  "item.powah.battery_blazing": "Battery (Blazing)",
-  "item.powah.battery_niotic": "Battery (Niotic)",
-  "item.powah.battery_spirited": "Battery (Spirited)",
-  "item.powah.battery_nitro": "Battery (Nitro)",
-  "item.powah.aerial_pearl": "Aerial Pearl",
-  "item.powah.player_aerial_pearl": "Player Aerial Pearl",
-  "item.powah.blank_card": "Blank Card",
-  "item.powah.binding_card": "Binding Card",
-  "item.powah.binding_card_dim": "Binding Card (Dimensional)",
-  "item.powah.lens_of_ender": "Lens Of Ender",
-  "item.powah.photoelectric_pane": "Photoelectric Pane",
-  "item.powah.thermoelectric_plate": "Thermo Plate",
-  "item.powah.energised_steel": "Energised Steel",
-  "item.powah.blazing_crystal": "Blazing Crystal",
-  "item.powah.niotic_crystal": "Niotic Crystal",
-  "item.powah.spirited_crystal": "Spirited Crystal",
-  "item.powah.charged_snowball": "Charged Snowball",
-  "item.powah.ender_core": "Ender Core",
-  "item.powah.steel_energized": "Energized Steel",
-  "item.powah.crystal_blazing": "Blazing Crystal",
-  "item.powah.crystal_niotic": "Niotic Crystal",
-  "item.powah.crystal_spirited": "Spirited Crystal",
-  "item.powah.crystal_nitro": "Nitro Crystal",
-  "item.powah.uraninite_raw": "Raw Uraninite",
-  "item.powah.uraninite_raw_poor": "Raw Uraninite (Poor)",
-  "item.powah.uraninite_raw_dense": "Raw Uraninite (Dense)",
-  "item.powah.uraninite": "Uraninite",
-  "info.powah.unlimited": "Unlimited Powah!!!",
-  "info.powah.wrench.mode.config": "Mode: %sConfig",
-  "info.powah.wrench.mode.rotate": "Mode: %sRotate",
-  "info.powah.wrench.mode.link": "Mode: %sLink",
-  "info.powah.charging.speed": "Charging Speed: %s FE/t",
-  "info.powah.channel": "Channel: %s",
-  "info.powah.new.energy": "New Energy: %s FE",
-  "info.powah.shift.to.apply": "[SHIFT + CLICK] to apply.",
-  "info.powah.new.capacity": "New Capacity: %s FE",
-  "info.powah.click.to.bind": "Right click to bind.",
-  "info.powah.solid.coolant": "Solid Coolant",
-  "info.powah.redstone": "Redstone",
-  "info.powah.carbon": "Carbon",
-  "info.powah.production": "Production",
-  "info.powah.fuel.consumption": "Fuel Consumption",
-  "info.powah.generation.factor": "Generation Factor",
-  "info.powah.gen.mode": "Auto Mode",
-  "info.powah.gen.mode.desc": "The reactor will stop when is full and start \nwhen has less than 70% of energy.",
-  "gui.powah.jei.category.magmatic": "Magmatic Fluids",
-  "gui.powah.jei.category.heat.sources": "Heat Sources",
-  "gui.powah.jei.category.coolant": "Coolants",
-  "gui.powah.jei.category.solid.coolant": "Solid Coolants",
-  "gui.powah.jei.category.energizing": "Energizing",
-  "jei.powah.player_aerial_pearl": "Use an Aerial Pearl on Zombie or Husk.",
-  "jei.powah.binding_card_dim": "Use a Binding card on Enderman or Endermite.",
-  "jei.powah.lens_of_ender": "Use a Photoelectric Pane on Enderman or Endermite.",
-  "chat.powah.not.enough.blocks": "Not enough Blocks! You need %s more!",
-  "chat.powah.no.binding": "This Card is already bound to %s!",
-  "chat.powah.wrench.link.start": "Started linking ...",
-  "chat.powah.wrench.link.done": "Linking done!",
-  "chat.powah.wrench.link.fail": "Out of range!!",
+    "itemGroup.powah": "Powah",
 
-  "block.powah.energy_cell_overcharged": "Energy Cell (Overcharged)",
-  "block.powah.ender_cell_overcharged": "Ender Cell (Overcharged)",
-  "block.powah.energy_cable_overcharged": "Energy Cable (Overcharged)",
-  "block.powah.ender_gate_overcharged": "Ender Gate (Overcharged)",
-  "block.powah.energizing_rod_overcharged": "Energizing Rod (Overcharged)",
-  "block.powah.furnator_overcharged": "Furnator (Overcharged)",
-  "block.powah.magmator_overcharged": "Magmator (Overcharged)",
-  "block.powah.thermo_generator_overcharged": "Thermo Generator (Overcharged)",
-  "block.powah.solar_panel_overcharged": "Solar Panel (Overcharged)",
-  "block.powah.reactor_overcharged": "Reactor (Overcharged)",
-  "block.powah.player_transmitter_overcharged": "Player Transmitter (Overcharged)",
-  "block.powah.energy_hopper_overcharged": "Energy Hopper (Overcharged)",
-  "block.powah.energy_discharger_overcharged": "Energy Discharger (Overcharged)",
-  "item.powah.overcharged_core": "Overcharged Core",
-  "item.powah.battery_overcharged": "Battery (Overcharged)",
-  "item.powah.capacitor_overcharged": "Overcharged Capacitor",
-  "item.powah.capacitor_creative": "Creative Capacitor",
-  "item.powah.battery_creative": "Battery (Creative)",
-  "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn.",
-  "item.powah.energized_boots_starter": "Energized Boots (Starter)",
-  "item.powah.energized_leggings_starter": "Energized Leggings (Starter)",
-  "item.powah.energized_chestplate_starter": "Energized Chestplate (Starter)",
-  "item.powah.energized_helmet_starter": "Energized Helmet (Starter)"
+    "tier.powah.starter": "Starter",
+    "tier.powah.basic": "Basic",
+    "tier.powah.hardened": "Hardened",
+    "tier.powah.blazing": "Blazing",
+    "tier.powah.niotic": "Niotic",
+    "tier.powah.spirited": "Spirited",
+    "tier.powah.nitro": "Nitro",
+    "tier.powah.overcharged": "Overcharged",
+    "tier.powah.creative": "Creative",
+
+    "block.powah.energy_cell": "Energy Cell",
+    "block.powah.ender_cell": "Ender Cell",
+    "block.powah.energy_cable": "Energy Cable",
+    "block.powah.ender_gate": "Ender Gate",
+    "block.powah.energizing_rod": "Energizing Rod",
+    "block.powah.furnator": "Furnator",
+    "block.powah.magmator": "Magmator",
+    "block.powah.thermo_generator": "Thermo Generator",
+    "block.powah.solar_panel": "Solar Panel",
+    "block.powah.reactor": "Reactor",
+    "block.powah.energy_hopper": "Energy Hopper",
+    "block.powah.energy_discharger": "Energy Discharger",
+    "block.powah.energizing_orb": "Energizing Orb",
+    "block.powah.energized_steel_block": "Block Of Energized Steel",
+    "block.powah.blazing_crystal_block": "Block Of Blazing Crystal",
+    "block.powah.niotic_crystal_block": "Block Of Niotic Crystal",
+    "block.powah.spirited_crystal_block": "Block Of Spirited Crystal",
+    "block.powah.nitro_crystal_block": "Block Of Nitro Crystal",
+    "block.powah.uraninite_block": "Block Of Uraninite",
+    "block.powah.uraninite_ore": "Uraninite Ore",
+    "block.powah.uraninite_ore_poor": "Uraninite Ore (Poor)",
+    "block.powah.uraninite_ore_dense": "Uraninite Ore (Dense)",
+    "block.powah.dry_ice": "Dry Ice",
+    "item.powah.wrench": "Wrench",
+    "item.powah.dielectric_paste": "Dielectric Paste",
+    "item.powah.dielectric_rod": "Dielectric Rod",
+    "item.powah.dielectric_rod_horizontal": "Dielectric Rod (Horizontal)",
+    "item.powah.dielectric_casing": "Dielectric Casing",
+    "item.powah.capacitor_basic_tiny": "Basic Capacitor (Tiny)",
+    "item.powah.capacitor_basic": "Basic Capacitor",
+    "item.powah.capacitor_basic_large": "Basic Capacitor (Large)",
+    "item.powah.capacitor_hardened": "Hardened Capacitor",
+    "item.powah.capacitor_blazing": "Blazing Capacitor",
+    "item.powah.capacitor_niotic": "Niotic Capacitor",
+    "item.powah.capacitor_spirited": "Spirited Capacitor",
+    "item.powah.capacitor_nitro": "Nitro Capacitor",
+    "item.powah.battery_starter": "Battery (Starter)",
+    "item.powah.battery_basic": "Battery (Basic)",
+    "item.powah.battery_hardened": "Battery (Hardened)",
+    "item.powah.battery_blazing": "Battery (Blazing)",
+    "item.powah.battery_niotic": "Battery (Niotic)",
+    "item.powah.battery_spirited": "Battery (Spirited)",
+    "item.powah.battery_nitro": "Battery (Nitro)",
+    "item.powah.aerial_pearl": "Aerial Pearl",
+    "item.powah.player_aerial_pearl": "Player Aerial Pearl",
+    "item.powah.blank_card": "Blank Card",
+    "item.powah.binding_card": "Binding Card",
+    "item.powah.binding_card_dim": "Binding Card (Dimensional)",
+    "item.powah.lens_of_ender": "Lens Of Ender",
+    "item.powah.photoelectric_pane": "Photoelectric Pane",
+    "item.powah.thermoelectric_plate": "Thermo Plate",
+    "item.powah.energised_steel": "Energised Steel",
+    "item.powah.blazing_crystal": "Blazing Crystal",
+    "item.powah.niotic_crystal": "Niotic Crystal",
+    "item.powah.spirited_crystal": "Spirited Crystal",
+    "item.powah.charged_snowball": "Charged Snowball",
+    "item.powah.ender_core": "Ender Core",
+    "item.powah.steel_energized": "Energized Steel",
+    "item.powah.crystal_blazing": "Blazing Crystal",
+    "item.powah.crystal_niotic": "Niotic Crystal",
+    "item.powah.crystal_spirited": "Spirited Crystal",
+    "item.powah.crystal_nitro": "Nitro Crystal",
+    "item.powah.uraninite_raw": "Raw Uraninite",
+    "item.powah.uraninite_raw_poor": "Raw Uraninite (Poor)",
+    "item.powah.uraninite_raw_dense": "Raw Uraninite (Dense)",
+    "item.powah.uraninite": "Uraninite",
+    "info.powah.unlimited": "Unlimited Powah!!!",
+    "info.powah.wrench.mode.config": "Mode: %sConfig",
+    "info.powah.wrench.mode.rotate": "Mode: %sRotate",
+    "info.powah.wrench.mode.link": "Mode: %sLink",
+    "info.powah.charging.speed": "Charging Speed: %s FE/t",
+    "info.powah.channel": "Channel: %s",
+    "info.powah.new.energy": "New Energy: %s FE",
+    "info.powah.shift.to.apply": "[SHIFT + CLICK] to apply.",
+    "info.powah.new.capacity": "New Capacity: %s FE",
+    "info.powah.click.to.bind": "Right click to bind.",
+    "info.powah.solid.coolant": "Solid Coolant",
+    "info.powah.redstone": "Redstone",
+    "info.powah.carbon": "Carbon",
+    "info.powah.production": "Production",
+    "info.powah.fuel.consumption": "Fuel Consumption",
+    "info.powah.generation.factor": "Generation Factor",
+    "info.powah.gen.mode": "Auto Mode",
+    "info.powah.gen.mode.desc": "The reactor will stop when is full and start \nwhen has less than 70% of energy.",
+    "gui.powah.jei.category.magmatic": "Magmatic Fluids",
+    "gui.powah.jei.category.heat.sources": "Heat Sources",
+    "gui.powah.jei.category.coolant": "Coolants",
+    "gui.powah.jei.category.solid.coolant": "Solid Coolants",
+    "gui.powah.jei.category.energizing": "Energizing",
+    "jei.powah.player_aerial_pearl": "Use an Aerial Pearl on Zombie or Husk.",
+    "jei.powah.binding_card_dim": "Use a Binding card on Enderman or Endermite.",
+    "jei.powah.lens_of_ender": "Use a Photoelectric Pane on Enderman or Endermite.",
+    "chat.powah.not.enough.blocks": "Not enough Blocks! You need %s more!",
+    "chat.powah.no.binding": "This Card is already bound to %s!",
+    "chat.powah.wrench.link.start": "Started linking ...",
+    "chat.powah.wrench.link.done": "Linking done!",
+    "chat.powah.wrench.link.fail": "Out of range!!",
+
+    "item.powah.overcharged_core": "Overcharged Core",
+    "item.powah.battery_overcharged": "Battery (Overcharged)",
+    "item.powah.capacitor_overcharged": "Overcharged Capacitor",
+    "item.powah.capacitor_creative": "Creative Capacitor",
+    "item.powah.battery_creative": "Battery (Creative)",
+    "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn.",
+    "item.powah.energized_boots_starter": "Energized Boots (Starter)",
+    "item.powah.energized_leggings_starter": "Energized Leggings (Starter)",
+    "item.powah.energized_chestplate_starter": "Energized Chestplate (Starter)",
+    "item.powah.energized_helmet_starter": "Energized Helmet (Starter)"
 }
