Battery patch (pt 2)

--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -11,18 +11,20 @@
     "tier.powah.overcharged": "Overcharged",
     "tier.powah.creative": "Creative",
 
-    "block.powah.energy_cell": "Energy Cell",
-    "block.powah.ender_cell": "Ender Cell",
-    "block.powah.energy_cable": "Energy Cable",
-    "block.powah.ender_gate": "Ender Gate",
-    "block.powah.energizing_rod": "Energizing Rod",
-    "block.powah.furnator": "Furnator",
-    "block.powah.magmator": "Magmator",
-    "block.powah.thermo_generator": "Thermo Generator",
-    "block.powah.solar_panel": "Solar Panel",
-    "block.powah.reactor": "Reactor",
-    "block.powah.energy_hopper": "Energy Hopper",
-    "block.powah.energy_discharger": "Energy Discharger",
+    "type.powah.energy_cell": "Energy Cell",
+    "type.powah.ender_cell": "Ender Cell",
+    "type.powah.energy_cable": "Energy Cable",
+    "type.powah.ender_gate": "Ender Gate",
+    "type.powah.energizing_rod": "Energizing Rod",
+    "type.powah.furnator": "Furnator",
+    "type.powah.magmator": "Magmator",
+    "type.powah.thermo_generator": "Thermo Generator",
+    "type.powah.solar_panel": "Solar Panel",
+    "type.powah.reactor": "Reactor",
+    "type.powah.energy_hopper": "Energy Hopper",
+    "type.powah.energy_discharger": "Energy Discharger",
+    "type.powah.battery": "Battery",
+
     "block.powah.energizing_orb": "Energizing Orb",
     "block.powah.energized_steel_block": "Block Of Energized Steel",
     "block.powah.blazing_crystal_block": "Block Of Blazing Crystal",
@@ -34,6 +36,7 @@
     "block.powah.uraninite_ore_poor": "Uraninite Ore (Poor)",
     "block.powah.uraninite_ore_dense": "Uraninite Ore (Dense)",
     "block.powah.dry_ice": "Dry Ice",
+
     "item.powah.wrench": "Wrench",
     "item.powah.dielectric_paste": "Dielectric Paste",
     "item.powah.dielectric_rod": "Dielectric Rod",
@@ -47,13 +50,6 @@
     "item.powah.capacitor_niotic": "Niotic Capacitor",
     "item.powah.capacitor_spirited": "Spirited Capacitor",
     "item.powah.capacitor_nitro": "Nitro Capacitor",
-    "item.powah.battery_starter": "Battery (Starter)",
-    "item.powah.battery_basic": "Battery (Basic)",
-    "item.powah.battery_hardened": "Battery (Hardened)",
-    "item.powah.battery_blazing": "Battery (Blazing)",
-    "item.powah.battery_niotic": "Battery (Niotic)",
-    "item.powah.battery_spirited": "Battery (Spirited)",
-    "item.powah.battery_nitro": "Battery (Nitro)",
     "item.powah.aerial_pearl": "Aerial Pearl",
     "item.powah.player_aerial_pearl": "Player Aerial Pearl",
     "item.powah.blank_card": "Blank Card",
@@ -110,10 +106,8 @@
     "chat.powah.wrench.link.fail": "Out of range!!",
 
     "item.powah.overcharged_core": "Overcharged Core",
-    "item.powah.battery_overcharged": "Battery (Overcharged)",
     "item.powah.capacitor_overcharged": "Overcharged Capacitor",
     "item.powah.capacitor_creative": "Creative Capacitor",
-    "item.powah.battery_creative": "Battery (Creative)",
     "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn.",
     "item.powah.energized_boots_starter": "Energized Boots (Starter)",
     "item.powah.energized_leggings_starter": "Energized Leggings (Starter)",
