Lang prettify-ing + kas' set fix

--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -37,11 +37,6 @@
     "block.powah.uraninite_ore_dense": "Uraninite Ore (Dense)",
     "block.powah.dry_ice": "Dry Ice",
 
-    "item.powah.wrench": "Wrench",
-    "item.powah.dielectric_paste": "Dielectric Paste",
-    "item.powah.dielectric_rod": "Dielectric Rod",
-    "item.powah.dielectric_rod_horizontal": "Dielectric Rod (Horizontal)",
-    "item.powah.dielectric_casing": "Dielectric Casing",
     "item.powah.capacitor_basic_tiny": "Basic Capacitor (Tiny)",
     "item.powah.capacitor_basic": "Basic Capacitor",
     "item.powah.capacitor_basic_large": "Basic Capacitor (Large)",
@@ -50,6 +45,31 @@
     "item.powah.capacitor_niotic": "Niotic Capacitor",
     "item.powah.capacitor_spirited": "Spirited Capacitor",
     "item.powah.capacitor_nitro": "Nitro Capacitor",
+    "item.powah.capacitor_overcharged": "Overcharged Capacitor",
+    "item.powah.capacitor_creative": "Creative Capacitor",
+
+    "item.powah.energized_boots_starter": "Energized Boots (Starter)",
+    "item.powah.energized_leggings_starter": "Energized Leggings (Starter)",
+    "item.powah.energized_chestplate_starter": "Energized Chestplate (Starter)",
+    "item.powah.energized_helmet_starter": "Energized Helmet (Starter)",
+
+    "item.powah.energised_steel": "Energised Steel",
+    "item.powah.blazing_crystal": "Blazing Crystal",
+    "item.powah.niotic_crystal": "Niotic Crystal",
+    "item.powah.spirited_crystal": "Spirited Crystal",
+    "item.powah.crystal_nitro": "Nitro Crystal",
+    "item.powah.overcharged_core": "Overcharged Core",
+
+    "item.powah.uraninite_raw": "Raw Uraninite",
+    "item.powah.uraninite_raw_poor": "Raw Uraninite (Poor)",
+    "item.powah.uraninite_raw_dense": "Raw Uraninite (Dense)",
+    "item.powah.uraninite": "Uraninite",
+
+    "item.powah.wrench": "Wrench",
+    "item.powah.dielectric_paste": "Dielectric Paste",
+    "item.powah.dielectric_rod": "Dielectric Rod",
+    "item.powah.dielectric_rod_horizontal": "Dielectric Rod (Horizontal)",
+    "item.powah.dielectric_casing": "Dielectric Casing",
     "item.powah.aerial_pearl": "Aerial Pearl",
     "item.powah.player_aerial_pearl": "Player Aerial Pearl",
     "item.powah.blank_card": "Blank Card",
@@ -58,21 +78,9 @@
     "item.powah.lens_of_ender": "Lens Of Ender",
     "item.powah.photoelectric_pane": "Photoelectric Pane",
     "item.powah.thermoelectric_plate": "Thermo Plate",
-    "item.powah.energised_steel": "Energised Steel",
-    "item.powah.blazing_crystal": "Blazing Crystal",
-    "item.powah.niotic_crystal": "Niotic Crystal",
-    "item.powah.spirited_crystal": "Spirited Crystal",
     "item.powah.charged_snowball": "Charged Snowball",
     "item.powah.ender_core": "Ender Core",
-    "item.powah.steel_energized": "Energized Steel",
-    "item.powah.crystal_blazing": "Blazing Crystal",
-    "item.powah.crystal_niotic": "Niotic Crystal",
-    "item.powah.crystal_spirited": "Spirited Crystal",
-    "item.powah.crystal_nitro": "Nitro Crystal",
-    "item.powah.uraninite_raw": "Raw Uraninite",
-    "item.powah.uraninite_raw_poor": "Raw Uraninite (Poor)",
-    "item.powah.uraninite_raw_dense": "Raw Uraninite (Dense)",
-    "item.powah.uraninite": "Uraninite",
+
     "info.powah.unlimited": "Unlimited Powah!!!",
     "info.powah.wrench.mode.config": "Mode: %sConfig",
     "info.powah.wrench.mode.rotate": "Mode: %sRotate",
@@ -91,6 +99,7 @@
     "info.powah.generation.factor": "Generation Factor",
     "info.powah.gen.mode": "Auto Mode",
     "info.powah.gen.mode.desc": "The reactor will stop when is full and start \nwhen has less than 70% of energy.",
+
     "gui.powah.jei.category.magmatic": "Magmatic Fluids",
     "gui.powah.jei.category.heat.sources": "Heat Sources",
     "gui.powah.jei.category.coolant": "Coolants",
@@ -99,18 +108,12 @@
     "jei.powah.player_aerial_pearl": "Use an Aerial Pearl on Zombie or Husk.",
     "jei.powah.binding_card_dim": "Use a Binding card on Enderman or Endermite.",
     "jei.powah.lens_of_ender": "Use a Photoelectric Pane on Enderman or Endermite.",
+
     "chat.powah.not.enough.blocks": "Not enough Blocks! You need %s more!",
     "chat.powah.no.binding": "This Card is already bound to %s!",
     "chat.powah.wrench.link.start": "Started linking ...",
     "chat.powah.wrench.link.done": "Linking done!",
     "chat.powah.wrench.link.fail": "Out of range!!",
 
-    "item.powah.overcharged_core": "Overcharged Core",
-    "item.powah.capacitor_overcharged": "Overcharged Capacitor",
-    "item.powah.capacitor_creative": "Creative Capacitor",
-    "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn.",
-    "item.powah.energized_boots_starter": "Energized Boots (Starter)",
-    "item.powah.energized_leggings_starter": "Energized Leggings (Starter)",
-    "item.powah.energized_chestplate_starter": "Energized Chestplate (Starter)",
-    "item.powah.energized_helmet_starter": "Energized Helmet (Starter)"
+    "tooltip.powah.armor_lightning_immunity": "Grants lightning bolt damange immunity when a full set of Powah armor is worn."
 }
