some stupid fixes + overchared core block

--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -24,13 +24,15 @@
     "type.powah.energy_hopper": "Energy Hopper",
     "type.powah.energy_discharger": "Energy Discharger",
     "type.powah.battery": "Battery",
+    "type.powah.player_transmitter": "Player Transmitter",
 
     "block.powah.energizing_orb": "Energizing Orb",
     "block.powah.energized_steel_block": "Block Of Energized Steel",
-    "block.powah.blazing_crystal_block": "Block Of Blazing Crystal",
-    "block.powah.niotic_crystal_block": "Block Of Niotic Crystal",
-    "block.powah.spirited_crystal_block": "Block Of Spirited Crystal",
-    "block.powah.nitro_crystal_block": "Block Of Nitro Crystal",
+    "block.powah.blazing_crystal_block": "Block Of Blazing Crystals",
+    "block.powah.niotic_crystal_block": "Block Of Niotic Crystals",
+    "block.powah.spirited_crystal_block": "Block Of Spirited Crystals",
+    "block.powah.nitro_crystal_block": "Block Of Nitro Crystals",
+    "block.powah.overcharged_core_block": "Block Of Overcharged Cores",
     "block.powah.uraninite_block": "Block Of Uraninite",
     "block.powah.uraninite_ore": "Uraninite Ore",
     "block.powah.uraninite_ore_poor": "Uraninite Ore (Poor)",
