epic armor system part 2 (rainbuu do your thing)

--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -90,6 +90,9 @@
     "item.powah.energized_chestplate_overcharged": "Energized Chestplate (Overcharged)",
     "item.powah.energized_helmet_overcharged": "Energized Helmet (Overcharged)",
 
+    "armor_effect.powah.starter": "Thunder damage immunity",
+    "armor_effect.powah.overcharged": "Creative flight",
+
     "item.powah.steel_energized": "Energized Steel",
     "item.powah.crystal_blazing": "Blazing Crystal",
     "item.powah.crystal_niotic": "Niotic Crystal",
