wip stuff i want slep

--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -91,6 +91,7 @@
     "item.powah.energized_helmet_overcharged": "Energized Helmet (Overcharged)",
 
     "armor_effect.powah.starter": "Thunder damage immunity",
+    "armor_effect.powah.nitro": "Health boost V (10 extra hearts)",
     "armor_effect.powah.overcharged": "Creative flight",
 
     "item.powah.steel_energized": "Energized Steel",
