it's finally done

--- a/src/main/resources/assets/powah/lang/en_us.json
+++ b/src/main/resources/assets/powah/lang/en_us.json
@@ -96,7 +96,7 @@
     "armor_effect.powah.blazing": "Jump boost",
     "armor_effect.powah.niotic": "Water breathing",
     "armor_effect.powah.spirited": "Night vision",
-    "armor_effect.powah.nitro": "Health boost",
+    "armor_effect.powah.nitro": "10 extra hearts",
     "armor_effect.powah.overcharged": "Creative flight",
 
     "item.powah.steel_energized": "Energized Steel",
